apps/wakapi/deployment.yaml
# yaml-language-server: $schema=https://github.com/yannh/kubernetes-json-schema/raw/refs/heads/master/v1.33.0/deployment-apps-v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wakapi
  namespace: wakapi
  labels:
    app: wakapi
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: wakapi
  template:
    metadata:
      labels:
        app: wakapi
    spec:
      containers:
        - name: wakapi
          image: "ghcr.io/muety/wakapi:2.15.0"
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /api/health
              port: http
          readinessProbe:
            httpGet:
              path: /api/health
              port: http
          resources:
            limits:
              cpu: 2
              memory: 1Gi
            requests:
              cpu: 500m
              memory: 256Mi
          volumeMounts:
            - mountPath: /data
              name: wakapi-data
      volumes:
        - name: wakapi-data
          persistentVolumeClaim:
            claimName: wakapi-data
